--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url('https://images.squarespace-cdn.com/content/v1/59b6f8b603596ec37e6d6a69/1588013617660-57OM59AZDOK9PPUN7NCD/Red%2BGlitch%2BBackground.jpg?format=1000w');
+    background-image: url('https://images.unsplash.com/photo-1501141178950-e7fa06e4adf5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80');
     background-size: cover;
-    opacity: 0.15;
+    opacity: 0.1;
 }
 
 .content{
